# AlgorithmDesignManualCXI

./: .gitignore  README.md  book.toml
examples/: heap.scm  struct_person.c
leet/C/: Makefile  meson.build
leet/C/code/: daily_temperatures.c  divide_two_int.c  meson.build  remove_k_digits.c  rotate_list.c  twosum.c
leet/C/common/: common.c  common.h
leet/python/: rotate_list.py
leet/rust/: rotate_list.rs
libadm/: Makefile  libadm.make  linked_list.h  main.c  premake5.lua  xmake.lua
libadm/include/: binary_tree.h  common.h  linked_list.h
libadm/include/adm/: binary_tree.h  linked_list.h
libadm/src/: binary_tree.c  linked_list.c
libadm/tests/: binary_tree_test.c  linked_list_test.c
nimadm/: nimadm.nimble
nimadm/src/: nimadm.nim
nimadm/src/nimadm/: binary_tree.nim  linked_list.nim  rawlist.nim
nimadm/tests/: tbinary_tree  tbinary_tree.nim  test1.nim  test_linked_list  test_linked_list.nim  test_rawlist.nim
rsadm/: Cargo.toml
rsadm/src/: linked_list.rs
src/: 01intro.md  02analysis.md  03data_struct.md  04sorting.md  SUMMARY.md
zigadm/: build.zig
zigadm/src/: main.zig
zigadm/src/data_structures/: index.zig  slinked_list.zig
